# Hoctor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  database.py  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
FastAPI/: main.db  main.py
config/: asgi.py  urls.py
config/settings/: base.py  dev.py  prod.py  test.py
hoctor/: manage.py  requirements.txt
hoctor/hoctor/: asgi.py  settings.py  urls.py  wsgi.py
hoctor/main/: .gitignore  .travis.yml  dbmongo.py  test.py  urls.py  views.py
hoctor/main/static/css/: home.css  tracking.css
hoctor/main/static/js/: index.js
hoctor/main/templates/: bitdurg.html  cse.html  home.html  landing.html  library.html  tracking.html
hoctor/main/whereami/: predict.py
hoctor/tracking/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
hoctor/tracking/management/commands/: capture_fingerprint.py  seed_demo.py
hoctor/tracking/migrations/: 0001_initial.py
hoctor/tracking/services/: __init__.py  predictor.py  scanner.py
hoctor/tracking/tests/: test_api.py  test_predictor.py  test_scanner.py
hoctor/venues/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
hoctor/venues/migrations/: 0001_initial.py
hoctor/venues/tests/: test_api.py  test_models.py
hoctor/web/: apps.py  urls.py  views.py
hoctor/web/templates/web/: capture.html  dashboard.html  landing.html  track.html  venue_detail.html
static/css/: app.css
templates/: base.html
tests/: factories.py
