[project]
name = "hoctor"
version = "1.0.0"
description = "Indoor Wi-Fi fingerprint location tracker built with Django."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Hoctor Maintainers" }]
keywords = ["django", "indoor-positioning", "wifi", "machine-learning"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django>=6.0",
    "djangorestframework>=3.16",
    "django-environ>=0.12",
    "django-filter>=25.1",
    "drf-spectacular>=0.28",
    "whitenoise>=6.8",
    "gunicorn>=23.0",
    "psycopg[binary]>=3.2",
    "scikit-learn>=1.6",
    "numpy>=2.2",
    "joblib>=1.4",
]

[project.optional-dependencies]
scan = [
    "access-points>=0.4.73",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "factory-boy>=3.3",
    "ruff>=0.8",
    "mypy>=1.13",
    "django-stubs[compatible-mypy]>=5.1",
    "djangorestframework-stubs[compatible-mypy]>=3.15",
    "ipython>=8.30",
    "django-debug-toolbar>=4.4",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hoctor", "config"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["migrations", "staticfiles", "media"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "C4",
    "DJ",
    "SIM",
    "RUF",
]
ignore = ["E501", "DJ001", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]
"**/settings/*.py" = ["F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
exclude = ["migrations", "staticfiles", "media", ".venv"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "joblib.*", "access_points.*", "environ.*", "factory.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "tests.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--reuse-db",
]
testpaths = ["hoctor", "tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["hoctor", "config"]
omit = ["*/migrations/*", "*/tests/*", "manage.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
